--- a/popup.html
+++ b/popup.html
@@ -10,6 +10,7 @@
             
         }
         body{
+            background-color: red;
             padding: 0px;
             margin: 0px;
             padding: 7px 18px 0px 18px;
