--- a/popup.html
+++ b/popup.html
@@ -10,6 +10,7 @@
             
         }
         body{
+            color: white;
             background-color: red;
             width: 10px;
             padding: 0px;
